--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>spark</groupId>
-	<artifactId>Spark</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0</version>
-	<!-- TODO project name  -->
-	<name>quickstart</name>
-	<description></description>
-	<!--
-		TODO <organization> <name>company name</name> <url>company url</url>
-		</organization>
-	-->
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	<properties>
-		<jetty.version>7.3.0.v20110203</jetty.version>
-	</properties>
+	<groupId>spark.plugin</groupId>
+	<artifactId>spark-maven-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>spark-maven-plugin Maven Mojo</name>
+	<url>http://maven.apache.org</url>
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>2.0</version>
+		</dependency>
+
 		<!-- LOGGING DEPENDENCIES - LOG4J -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -56,14 +48,15 @@
 		</dependency>
 
 		<!--  JETTY DEPENDENCIES FOR TESTING  -->
-		<dependency>
-			<groupId>org.eclipse.jetty.aggregate</groupId>
-			<artifactId>jetty-all-server</artifactId>
-			<version>${jetty.version}</version>
-			<scope>provided</scope>
-		</dependency>
+		<!--        <dependency>-->
+		<!--            <groupId>org.eclipse.jetty.aggregate</groupId>-->
+		<!--            <artifactId>jetty-all-server</artifactId>-->
+		<!--            <version>${jetty.version}</version>-->
+		<!--            <scope>provided</scope>-->
+		<!--        </dependency>-->
 
 	</dependencies>
+
 	<build>
 		<resources>
 			<resource>
@@ -81,66 +74,27 @@
 				</excludes>
 			</resource>
 		</resources>
-		<testResources>
-			<testResource>
-				<filtering>false</filtering>
-				<directory>src/test/java</directory>
-				<includes>
-					<include>**</include>
-				</includes>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</testResource>
-		</testResources>
+
+
 		<plugins>
+
 			<plugin>
 				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 					<optimize>true</optimize>
 					<debug>true</debug>
 				</configuration>
 			</plugin>
+			
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.version}</version>
-				<configuration>
-				</configuration>
+				<groupId>spark.plugin</groupId>
+				<artifactId>spark-maven-plugin</artifactId>
+				<version>1.0-SNAPSHOT</version>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<configuration>
-					<downloadSources>true</downloadSources>
-				</configuration>
-			</plugin>
-
-<!--			<plugin>-->
-<!--				<groupId>org.codehaus.mojo</groupId>-->
-<!--				<artifactId>exec-maven-plugin</artifactId>-->
-<!--				<version>1.1.1</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<phase>test</phase>-->
-<!--						<goals>-->
-<!--							<goal>java</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<mainClass>spark.Start</mainClass>-->
-<!--							<arguments>-->
-<!--								<argument>arg0</argument>-->
-<!--								<argument>arg1</argument>-->
-<!--							</arguments>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-
 		</plugins>
 	</build>
 
@@ -154,7 +108,7 @@
 		<repository>
 			<id>Apache Nexus</id>
 			<url>https://repository.apache.org/content/repositories/snapshots/
-			</url>
+            </url>
 			<releases>
 				<enabled>false</enabled>
 			</releases>
