--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<groupId>spark</groupId>
 	<artifactId>spark</artifactId>
 	<packaging>jar</packaging>
-	<version>0.9.9.1-SNAPSHOT</version>
+	<version>0.9.9.2-SNAPSHOT</version>
 	<name>Spark</name>
 	<url>http://www.sparkjava.com</url>
-	
+
 	<properties>
-        <jetty.version>7.3.0.v20110203</jetty.version>
-    </properties>
-	
+		<jetty.version>7.3.0.v20110203</jetty.version>
+	</properties>
+
 	<dependencies>
 		<!-- LOGGING DEPENDENCIES - LOG4J -->
 		<dependency>
@@ -29,7 +29,18 @@
 			<groupId>org.eclipse.jetty.aggregate</groupId>
 			<artifactId>jetty-webapp</artifactId>
 			<version>${jetty.version}</version>
-			<scope>provided</scope>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>commons-fileupload</groupId>-->
+<!--			<artifactId>commons-fileupload</artifactId>-->
+<!--			<version>1.2.2</version>-->
+<!--		</dependency>-->
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 
 		<!-- JUNIT DEPENDENCY FOR TESTING -->
