--- a/pom.xml
+++ b/pom.xml
@@ -20,18 +20,20 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.4</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
+			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.6.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<!-- Log implementation -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.0</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
