--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,19 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.aeells.spark</groupId>
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
-    <version>0.9.9.6-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>server</name>
 
     <parent>
         <groupId>com.aeells</groupId>
         <artifactId>spark</artifactId>
-        <version>0.9.9.6-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <dependencies>
