--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -1,20 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-            http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0             http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.aeells.spark</groupId>
     <artifactId>utils</artifactId>
     <packaging>jar</packaging>
-    <version>0.9.9.6-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>utils</name>
 
     <parent>
         <groupId>com.aeells</groupId>
         <artifactId>spark</artifactId>
-        <version>0.9.9.6-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <dependencies>
