--- a/server/pom.xml
+++ b/server/pom.xml
@@ -34,6 +34,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.6.4</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
