--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>spark</groupId>
 	<artifactId>spark</artifactId>
 	<packaging>jar</packaging>
-	<version>0.9.9.3-SNAPSHOT</version>
+	<version>0.9.9.4</version>
 	<name>Spark</name>
 	<url>http://www.sparkjava.com</url>
 
@@ -83,7 +83,6 @@
 				<configuration>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 
@@ -94,4 +93,5 @@
 		</snapshotRepository>
 	</distributionManagement>
 
+	
 </project>
