implement cookies support

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+                	<groupId>org.apache.httpcomponents</groupId>
+                    	<artifactId>httpclient</artifactId>
+                    	<version>4.2.2</version>
+                    	<scope>test</scope>
+                </dependency>
 	</dependencies>
 
 	<build>
