--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 	<groupId>com.sparkjava</groupId>
 	<artifactId>spark</artifactId>
 	<packaging>jar</packaging>
-	<version>0.9.9.4-SNAPSHOT</version>
+	<version>0.9.9.5-SNAPSHOT</version>
 	<name>Spark</name>
-        <description>A Sinatra inspired micro web framework</description>
+        <description>A Sinatra inspired java web framework</description>
 	<url>http://www.sparkjava.com</url>
         <licenses>
           <license>
