Removed log4j from comment in pom
Removed log4j from comment since it's not being used as dependency.

Issue: 43

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 	</properties>
 
 	<dependencies>
-		<!-- LOGGING DEPENDENCIES - LOG4J -->
+		<!-- LOGGING DEPENDENCIES -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
