Added jetty dependencies section comment in pom
For consistency and readability, jetty dependencies section is marked
with a comment.

Issue: 43

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
             <scope>provided</scope>
 		</dependency>
 
+		<!-- JETTY DEPENDENCIES -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
