--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,18 @@
 			<version>4.2.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.19</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.2.4</version>
+    		<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
