--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>com.sparkjava</groupId>
 	<artifactId>spark-core</artifactId>
 	<packaging>jar</packaging>
-	<version>0.9.9.7-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>Spark</name>
         <description>A Sinatra inspired java web framework</description>
 	<url>http://www.sparkjava.com</url>
