--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,42 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-        <parent>
-          <groupId>org.sonatype.oss</groupId>
-          <artifactId>oss-parent</artifactId>
-          <version>7</version>
-        </parent>
+
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>9</version>
+  </parent>
+
 	<groupId>com.sparkjava</groupId>
 	<artifactId>spark-core</artifactId>
-	<packaging>jar</packaging>
 	<version>1.1.1</version>
+
 	<name>Spark</name>
-        <description>A Sinatra inspired java web framework</description>
+  <description>A Sinatra inspired java web framework</description>
 	<url>http://www.sparkjava.com</url>
-        <licenses>
-          <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-          </license>
-        </licenses>
-        <scm>
-          <connection>scm:git:git@github.com:perwendel/spark.git</connection>
-          <developerConnection>scm:git:git@github.com:perwendel/spark.git</developerConnection>
-          <url>scm:git:git@github.com:perwendel/spark.git</url>
-        </scm>
-        <developers>
-        </developers>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:git@github.com:perwendel/spark.git</connection>
+    <developerConnection>scm:git:git@github.com:perwendel/spark.git</developerConnection>
+    <url>scm:git:git@github.com:perwendel/spark.git</url>
+  </scm>
+
+  <developers>
+  </developers>
 
 	<properties>
-		<jetty.version>9.0.2.v20130417</jetty.version>
+		<jetty.version>9.1.2.v20140210</jetty.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -37,16 +44,17 @@
 		<!-- LOGGING DEPENDENCIES -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.2</version>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.6</version>
+      <scope>provided</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.2</version>
-            <scope>provided</scope>
-		</dependency>
+    <!-- Template dependencies -->
+    <!--<dependency>-->
+      <!--<groupId>org.fusesource.scalate</groupId>-->
+      <!--<artifactId>scalate-core_2.10</artifactId>-->
+      <!--<version>1.6.1</version>-->
+    <!--</dependency>-->
 
 		<!-- JETTY DEPENDENCIES -->
 		<dependency>
@@ -54,7 +62,6 @@
 			<artifactId>jetty-server</artifactId>
 			<version>${jetty.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-webapp</artifactId>
@@ -65,31 +72,30 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.2.2</version>
+			<version>4.3.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.19</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-    		<groupId>com.google.code.gson</groupId>
-    		<artifactId>gson</artifactId>
-    		<version>2.2.4</version>
-    		<scope>test</scope>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>2.3.20</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+      <scope>test</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
-
 		<resources>
 			<resource>
 				<filtering>false</filtering>
@@ -111,10 +117,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<optimize>true</optimize>
 					<debug>true</debug>
 				</configuration>
@@ -122,7 +128,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.14</version>
+				<version>2.16</version>
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
@@ -132,7 +138,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
+				<version>2.9.1</version>
 				<configuration>
 				</configuration>
 			</plugin>
