--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
           <artifactId>oss-parent</artifactId>
           <version>7</version>
         </parent>
-	<groupId>nl.thebigb</groupId>
+	<groupId>com.sparkjava</groupId>
 	<artifactId>spark-core</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.2-fork</version>
+	<version>1.1.2</version>
 	<name>Spark</name>
         <description>A Sinatra inspired java web framework</description>
 	<url>http://www.sparkjava.com</url>
