Porting routes to use Path Travel Agent
* RouteEntry is gone, as the mechanics of mathcing paths is now done
  using Path Travel Agent.
* SimpleRouteMatcher retains its API.
* Path Travel Agent is used to match by path first. The handler returned
  by the path matching contains the neccesary mechanics to match on HTTP
  method and accept type, since Path Travel Agent only does path matching.

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <version>${jetty.version}</version>
         </dependency>
 
+        <!-- ROUTING DEPENDENCIES -->
+        <dependency>
+            <groupId>com.augustl</groupId>
+            <artifactId>pathtravelagent</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- JUNIT DEPENDENCY FOR TESTING -->
         <dependency>
             <groupId>junit</groupId>
